[gd_scene load_steps=3 format=3 uid="uid://056tu56xbrr"]

[ext_resource type="Script" uid="uid://rpk0teggr3ss" path="res://main_menu/settings_menu.gd" id="1_236yf"]
[ext_resource type="Theme" uid="uid://bilm420i6mgm1" path="res://themes/main_menu.tres" id="1_nm6d8"]

[node name="SettingsMenu" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_nm6d8")
script = ExtResource("1_236yf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 400)
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2

[node name="VideoLabel" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Video"

[node name="VideoSettingsGridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VideoSettingsGridContainer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
text = "Resolution"

[node name="resolution_options" type="OptionButton" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VideoSettingsGridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VideoSettingsGridContainer"]
layout_mode = 2
text = "VSync"

[node name="vsync_checkbox" type="CheckBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VideoSettingsGridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label3" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VideoSettingsGridContainer"]
layout_mode = 2
text = "Fullscreen"

[node name="fullscreen_checkbox" type="CheckBox" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VideoSettingsGridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ControlsLabel" type="Label" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Controls"

[node name="ControlsGridContainer" type="GridContainer" parent="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 0
columns = 2

[node name="apply_settings_button" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
disabled = true
text = "apply"

[node name="ApplySettingsDialog" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ApplySettingsDialog"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="VBoxContainer/ApplySettingsDialog/HBoxContainer"]
layout_mode = 2
text = "keep settings?"

[node name="ApplySettingsTimerRemaining" type="Label" parent="VBoxContainer/ApplySettingsDialog/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "20s"

[node name="Control" type="Control" parent="VBoxContainer/ApplySettingsDialog/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0

[node name="ApplyCancelButton" type="Button" parent="VBoxContainer/ApplySettingsDialog/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "cancel"

[node name="ApplyConfirmButton" type="Button" parent="VBoxContainer/ApplySettingsDialog/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "keep"

[node name="ApplySettingsTimer" type="Timer" parent="VBoxContainer/ApplySettingsDialog/HBoxContainer"]
unique_name_in_owner = true
wait_time = 10.0
one_shot = true

[connection signal="item_selected" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VideoSettingsGridContainer/resolution_options" to="." method="_on_resolution_options_item_selected"]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VideoSettingsGridContainer/vsync_checkbox" to="." method="_on_vsync_checkbox_toggled"]
[connection signal="toggled" from="VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer/VideoSettingsGridContainer/fullscreen_checkbox" to="." method="_on_fullscreen_checkbox_toggled"]
[connection signal="pressed" from="VBoxContainer/apply_settings_button" to="." method="_on_apply_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ApplySettingsDialog/HBoxContainer/ApplyCancelButton" to="." method="_on_apply_cancel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ApplySettingsDialog/HBoxContainer/ApplyConfirmButton" to="." method="_on_apply_confirm_button_pressed"]
[connection signal="timeout" from="VBoxContainer/ApplySettingsDialog/HBoxContainer/ApplySettingsTimer" to="." method="_on_apply_settings_timer_timeout"]
